--- a/styles/style.css
+++ b/styles/style.css
@@ -41,7 +41,7 @@ ul li a:hover {
 }
 
 ul li a {
-    color: gold;
+    color: white;
     font-size: 20px;
     transition: 0.5s;
     border-radius: 30px;
