--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@1,600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Concert+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,600&display=swap');
 
 /*POR DEFECTO*/
 * {
@@ -139,6 +139,8 @@ ul li a {
 
 .itf {
     border-radius: 100px;
+    width: 75px;
+    height: 75px;
 }
 
 .imagenindex1 {
@@ -299,13 +301,20 @@ footer {
     font-size: 25px;
 }
 
+.iconored {
+    width: 50px;
+    height: 50px;
+    transition: 0.2s;
+}
+
 .iconored:hover {
     transform: scale(1.1);
 }
 
 .footer1 {
-    font-family: 'Concert One', cursive;
+    font-family: 'Raleway', sans-serif;
     font-size: 15px;
+    color: black;
 }
 
 
@@ -337,6 +346,7 @@ footer {
 .fotopromo {
     grid-area: 2 / 2 / 5 / 3;
     display: flex;
+    justify-content: right;
 }
 
 .textopromo {
