--- a/styles/style.css
+++ b/styles/style.css
@@ -22,7 +22,7 @@ header {
     display: flex;
     width: 100%;
     padding: 15px 60px;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     background-image: url(../img/fondonegrotextura.jpg);
     background-size: contain;
@@ -109,12 +109,6 @@ ul li a {
     border-radius: 30px;
     color: white;
     background-color: black;
-}
-
-.t2 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .promocion1 {
@@ -392,4 +386,143 @@ footer {
 .fot6 {
     grid-area: 3 / 2 / 4 / 3;
     display: flex;
+}
+
+
+/*MOBILE*/
+
+@media screen and (max-width: 750px) {
+
+    header {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        padding: 15px 60px;
+        justify-content: space-around;
+        align-items: center;
+        background-image: url(../img/fondonegrotextura.jpg);
+        background-size: contain;
+    }
+
+    ul {
+        display: flex;
+        width: 100%;
+        gap: 10px;
+        background-color: black;
+        border-radius: 15px;
+        padding: 5px;
+    }
+
+    ul li a {
+        color: white;
+        font-size: 15px;
+        border-radius: 30px;
+    }
+
+    .p4 {
+        width: 150px;
+        height: 100px;
+        border-radius: 25px;
+
+    }
+
+
+    .grid1 {
+        display: grid;
+        width: 100%;
+        grid-template-columns: 5fr;
+        grid-template-rows: repeat(2, 2fr) 5fr 3fr;
+        grid-column-gap: 0px;
+        grid-row-gap: 50px;
+        padding: 30px;
+    }
+
+    .tituloprincipal {
+        grid-area: 1 / 1 / 2 / 2;
+        display: flex;
+        text-align: center;
+        justify-content: center;
+    }
+
+    .septiembre {
+        grid-area: 2 / 1 / 3 / 2;
+        display: flex;
+    }
+
+    .fotopromo {
+        grid-area: 3 / 1 / 4 / 2;
+        display: flex;
+        justify-content: center;
+    }
+
+    .textopromo {
+        grid-area: 4 / 1 / 5 / 2;
+
+    }
+
+    .titulo1 {
+        font-size: 25px;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        font-family: 'Permanent Marker', cursive;
+        text-decoration: underline;
+        background-image: url(../img/fondonaranja.jpg);
+        background-size: cover;
+    }
+
+    .promocion1 {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        padding: 20px;
+        font-family: 'Permanent Marker', cursive;
+        font-size: 15px;
+        border: 3px solid gold;
+        border-radius: 30px;
+        color: gold;
+        background-color: black;
+    }
+
+    .imagenindex1 {
+
+        width: 300px;
+        height: 350px;
+        border-radius: 20px;
+        display: flex;
+        justify-content: center;
+    
+    }
+
+    .texto3 {
+        color: #fff;
+        font-size: 15px;
+        background-color: rgb(0, 0, 0);
+        font-family: 'Permanent Marker', cursive;
+        border: 3px solid gold;
+        border-radius: 30px;
+        padding: 20px;
+    }
+
+    .itf {
+        border-radius: 100px;
+        width: 40px;
+        height: 40px;
+    }
+
+    .p1 {
+        font-size: 20px;
+    }
+    
+    .iconored {
+        width: 30px;
+        height: 30px;
+    }
+    
+    .footer1 {
+        font-family: 'Raleway', sans-serif;
+        font-size: 10px;
+        color: black;
+    }
+
 }
