--- a/styles/style.css
+++ b/styles/style.css
@@ -165,7 +165,20 @@ ul li a {
     border-radius: 15px;
     width: 250px;
     height: 300px;
+    margin-right: 50px;
+}
 
+.fotogaleria22 {
+    border-radius: 15px;
+    width: 250px;
+    height: 300px;
+    margin-left: 50px;
+}
+
+.fotogaleria4 {
+    border-radius: 15px;
+    width: 300px;
+    height: 250px;
 }
 
 .flecha2 {
@@ -208,16 +221,17 @@ ul li a {
     box-sizing: border-box;
 }
 
-.fieldhistoria {
-    background-color: rgb(0, 0, 0);
+.textohistoria {
+    display: flex;
+    justify-content: center;
+    background-color: black;
+    color: #fff;
+    font-size: 17px;
+    border: 2px solid gold;
     border-radius: 30px;
-    border: 3px solid gold;
+    text-decoration: none;
+    padding: 25px;
 
-
-}
-
-.texto6 {
-    color: white;
 }
 
 .texto3 {
@@ -230,8 +244,13 @@ ul li a {
 }
 
 .texto11 {
+    display: inline-block;
     color: white;
-    flex-direction: column;
+    border: 3px solid gold;
+    background-image: linear-gradient(to right, black, rgb(82, 76, 76));
+    border-radius: 30px;
+    padding: 30px;
+    font-size: 25px;
 }
 
 .formulario1 {
@@ -491,7 +510,7 @@ footer {
         border-radius: 20px;
         display: flex;
         justify-content: center;
-    
+
     }
 
     .texto3 {
@@ -510,19 +529,142 @@ footer {
         height: 40px;
     }
 
+
+    .t1 {
+        display: inline-block;
+        justify-content: center;
+        text-align: center;
+        padding: 20px;
+        font-family: 'Permanent Marker', cursive;
+        font-size: 15px;
+        border: 3px solid gold;
+        border-radius: 30px;
+        color: white;
+        background-color: black;
+    }
+
+    .textohistoria {
+        display: flex;
+        justify-content: center;
+        background-color: black;
+        color: #fff;
+        font-size: 15px;
+        border: 2px solid gold;
+        border-radius: 30px;
+        text-decoration: none;
+        padding: 25px;
+
+    }
+
+    .fotogaleria {
+        border-radius: 15px;
+        width: 300px;
+        height: 200px;
+    }
+
+    .fotogaleria1 {
+        border-radius: 15px;
+        width: 200px;
+        height: 200px;
+    }
+
+    .fotogaleria2 {
+        border-radius: 15px;
+        width: 150px;
+        height: 200px;
+        margin-right: 30px;
+    }
+
+    .fotogaleria22 {
+        border-radius: 15px;
+        width: 150px;
+        height: 200px;
+    }
+
+    .fotogaleria4 {
+        border-radius: 15px;
+        width: 180px;
+        height: 190px;
+    }
+
+    .p2 {
+        font-family: 'Dancing Script', cursive;
+        font-size: 20px;
+    }
+
+
+    .grid2 {
+        display: grid;
+        width: 100%;
+        grid-template-columns: repeat(2, 2fr);
+        grid-template-rows: repeat(3, 2fr);
+        grid-column-gap: 7px;
+        grid-row-gap: 10px;
+    }
+
+    .fot1 {
+        grid-area: 1 / 1 / 2 / 2;
+        display: flex;
+    }
+
+    .fot2 {
+        grid-area: 1 / 2 / 2 / 3;
+        display: flex;
+    }
+
+    .fot3 {
+        grid-area: 2 / 1 / 3 / 2;
+        display: flex;
+    }
+
+    .fot4 {
+        grid-area: 2 / 2 / 3 / 3;
+        display: flex;
+    }
+
+    .fot5 {
+        grid-area: 3 / 1 / 4 / 2;
+        display: flex;
+    }
+
+    .fot6 {
+        grid-area: 3 / 2 / 4 / 3;
+        display: flex;
+    }
+
+
+    .texto11 {
+        display: inline-block;
+        color: white;
+        border: 3px solid gold;
+        background-image: linear-gradient(to right, black, rgb(82, 76, 76));
+        border-radius: 30px;
+        padding: 30px;
+        font-size: 20px;
+    }
+
+
+
+
+
+
+
+
     .p1 {
         font-size: 20px;
     }
-    
+
     .iconored {
         width: 30px;
         height: 30px;
     }
-    
+
     .footer1 {
         font-family: 'Raleway', sans-serif;
         font-size: 10px;
         color: black;
     }
+
+
 
 }
