--- a/styles/style.css
+++ b/styles/style.css
@@ -108,7 +108,7 @@ ul li a {
     border: 3px solid gold;
     border-radius: 30px;
     color: white;
-    background-color: black;
+    background-image: linear-gradient(to right, black, rgb(82, 76, 76));
 }
 
 .promocion1 {
@@ -122,7 +122,7 @@ ul li a {
     border: 3px solid gold;
     border-radius: 30px;
     color: gold;
-    background-color: black;
+    background-image: linear-gradient(to right, black, rgb(82, 76, 76));
 }
 
 .secciongaleria {
@@ -216,7 +216,7 @@ ul li a {
 
 .texto3 {
     color: #fff;
-    background-color: rgb(0, 0, 0);
+    background-image: linear-gradient(to right, black, rgb(82, 76, 76));
     font-family: 'Permanent Marker', cursive;
     border: 3px solid gold;
     border-radius: 30px;
