--- a/styles/style.css
+++ b/styles/style.css
@@ -537,4 +537,17 @@ footer {
         font-size: 20px;
     }
 
+    .formulario1 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+        background-image: linear-gradient(to right, black, rgb(82, 76, 76));
+        border-radius: 15px;
+        border: 3px solid gold;
+        margin: auto;
+        width: 300px;
+    }
+
 }
