--- a/styles/style.css
+++ b/styles/style.css
@@ -97,8 +97,8 @@ main {
     text-align: center;
     font-family: 'Permanent Marker', cursive;
     text-decoration: underline;
-    background-image: url(../img/fondonaranja.jpg);
-    background-size: cover;
+    background-image: url(../img/fondonaranja2.jpg);
+    background-size: contain;
     color: black;
 }
 
@@ -122,7 +122,8 @@ main {
     font-family: 'Permanent Marker', cursive;
     font-size: 35px;
     border: 3px solid gold;
-    border-radius: 30px;
+    margin: auto;
+    width: 500px;
     color: gold;
     background-image: linear-gradient(to right, black, rgb(82, 76, 76));
 }
@@ -139,7 +140,7 @@ main {
 }
 
 .texto3 {
-    display: inline-block;
+    display: flex;
     justify-content: center;
     text-align: center;
     color: #fff;
@@ -148,7 +149,9 @@ main {
     border: 3px solid gold;
     border-radius: 30px;
     padding: 20px;
-    width: 100%;
+    width: 700px;
+    margin: auto;
+    flex-direction: column;
 }
 
 .colortex {
@@ -161,7 +164,8 @@ main {
     display: flex;
     justify-content: center;
     text-align: center;
-    align-items: center;
+    margin: auto;
+    width: 500px;
     padding: 20px;
     font-family: 'Permanent Marker', cursive;
     font-size: 30px;
@@ -294,8 +298,8 @@ main {
 
 footer {
     color: black;
-    background-image: url(../img/fondonaranja.jpg);
-    background-size: cover;
+    background-image: url(../img/fondonaranja2.jpg);
+    background-size: contain;
     text-align: center;
     padding: 25px 0px;
 }
@@ -395,14 +399,14 @@ footer {
 
 
     .titulo1 {
-        font-size: 25px;
+        font-size: 20px;
         display: flex;
         justify-content: center;
         text-align: center;
         font-family: 'Permanent Marker', cursive;
         text-decoration: underline;
-        background-image: url(../img/fondonaranja.jpg);
-        background-size: cover;
+        background-image: url(../img/fondonaranja2.jpg);
+        background-size: contain;
     }
 
     .imagenindex1 {
@@ -423,28 +427,32 @@ footer {
         font-family: 'Permanent Marker', cursive;
         font-size: 20px;
         border: 3px solid gold;
-        border-radius: 30px;
+        margin: auto;
+        width: 250px;
         color: gold;
         background-image: linear-gradient(to right, black, rgb(82, 76, 76));
     }
 
     .texto3 {
-        display: inline-block;
+        display: flex;
         justify-content: center;
         text-align: center;
         color: #fff;
         background-image: linear-gradient(to right, black, rgb(82, 76, 76));
         font-family: 'Permanent Marker', cursive;
-        font-size: 15px;
         border: 3px solid gold;
         border-radius: 30px;
         padding: 20px;
-        width: 100%;
+        width: 300px;
+        margin: auto;
+        flex-direction: column;
+        font-size: 20px;
     }
 
     .colortex {
         color: gold;
         font-family: 'Permanent Marker', cursive;
+        font-size: 20px;
 
     }
 
@@ -493,7 +501,8 @@ footer {
         display: flex;
         justify-content: center;
         text-align: center;
-        align-items: center;
+        margin: auto;
+        width: 200px;
         padding: 20px;
         font-family: 'Permanent Marker', cursive;
         font-size: 15px;
