--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Titan+One&display=swap');
+
 
 /*POR DEFECTO*/
 * {
@@ -90,16 +92,16 @@ main {
 
 
 .titulo1 {
-    font-size: 50px;
-    line-height: 50px;
+    font-size: 70px;
+    line-height: 65px;
     display: flex;
     justify-content: center;
     text-align: center;
-    font-family: 'Permanent Marker', cursive;
-    text-decoration: underline;
+    font-family: 'Titan One', cursive;
     background-image: url(../img/fondonaranja2.jpg);
     background-size: contain;
     color: black;
+
 }
 
 .itf {
@@ -306,6 +308,7 @@ footer {
 
 .p1 {
     font-size: 25px;
+    font-family: 'Permanent Marker', cursive;
 }
 
 .iconored {
@@ -400,13 +403,14 @@ footer {
 
     .titulo1 {
         font-size: 20px;
+        line-height: 65px;
         display: flex;
         justify-content: center;
         text-align: center;
-        font-family: 'Permanent Marker', cursive;
-        text-decoration: underline;
         background-image: url(../img/fondonaranja2.jpg);
         background-size: contain;
+        color: black;
+
     }
 
     .imagenindex1 {
@@ -468,7 +472,7 @@ footer {
     }
 
     .p1 {
-        font-size: 20px;
+        font-size: 15px;
     }
 
     .textohistoria {
