--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,11 +1,9 @@
-/*FONTS*/
+/*POR DEFECTO*/
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@1,600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Titan+One&display=swap");
-
-/*POR DEFECTO*/
 * {
   margin: 0.05%;
   padding: 0.05%;
@@ -15,7 +13,7 @@
   font-family: "Source Sans Pro", sans-serif;
 }
 
-/* HEADER */
+/*FONTS*/ /* HEADER */
 header {
   display: flex;
   width: 100%;
@@ -33,7 +31,6 @@ header {
   transition: 0.5s;
   margin: 20px;
 }
-
 .p4:hover {
   transform: scale(1.1);
 }
@@ -60,7 +57,6 @@ header {
   border-radius: 30px;
   transition: 0.5s;
 }
-
 .navtexto:hover {
   display: flex;
   justify-content: center;
@@ -234,7 +230,6 @@ main {
   border-radius: 15px;
   border-color: #fff;
 }
-
 .form1:hover {
   color: #fff;
   background-color: #000000;
@@ -300,7 +295,6 @@ footer {
   height: 50px;
   transition: 0.2s;
 }
-
 .iconored:hover {
   transform: scale(1.1);
 }
@@ -318,21 +312,17 @@ footer {
     height: 400px;
   }
 }
-
 @media screen and (max-width: 995px) {
   .fotocard1 {
     width: 600px;
     height: 300px;
   }
-
   .textcard {
     font-size: 15px;
   }
-
   .textcard1 {
     font-size: 15px;
   }
-
   .cardtamano {
     display: flex;
     width: 700px;
@@ -340,7 +330,6 @@ footer {
     margin: auto;
   }
 }
-
 @media screen and (max-width: 750px) {
   header {
     display: flex;
@@ -352,14 +341,12 @@ footer {
     background-image: url(../img/fondonegrotextura.jpg);
     background-size: contain;
   }
-
   header ul {
     display: flex;
     flex-direction: column;
     width: 100%;
     gap: 10px;
   }
-
   .nav1 {
     display: flex;
     justify-content: center;
@@ -369,7 +356,6 @@ footer {
     color: #000000;
     border: 3px outset #ffd700;
   }
-
   .navtexto {
     display: flex;
     justify-content: center;
@@ -381,7 +367,6 @@ footer {
     transition: 0.5s;
     padding: 10px;
   }
-
   .navtexto:active {
     display: flex;
     justify-content: center;
@@ -393,19 +378,16 @@ footer {
     font-family: "Permanent Marker", cursive;
     font-size: 20px;
   }
-
   .p4 {
     width: 200px;
     height: 150px;
     border-radius: 25px;
   }
-
   .itf {
     border-radius: 100px;
     width: 40px;
     height: 40px;
   }
-
   .titulo1 {
     font-size: 20px;
     line-height: 65px;
@@ -416,7 +398,6 @@ footer {
     background-size: contain;
     color: #000000;
   }
-
   .promocion1 {
     display: flex;
     justify-content: center;
@@ -430,22 +411,18 @@ footer {
     color: #ffd700;
     background-image: linear-gradient(to right, #000000, rgb(82, 76, 76));
   }
-
   .iconored {
     width: 30px;
     height: 30px;
   }
-
   .footer1 {
     font-family: "Raleway", sans-serif;
     font-size: 10px;
     color: #000000;
   }
-
   .p1 {
     font-size: 15px;
   }
-
   .textohistoria {
     display: flex;
     justify-content: center;
@@ -457,20 +434,17 @@ footer {
     text-decoration: none;
     padding: 25px;
   }
-
   .fotogaleria {
     border-radius: 15px;
     width: 300px;
     height: 200px;
   }
-
   .c3 {
     display: flex;
     width: 300px;
     height: 300px;
     margin: auto;
   }
-
   .t1 {
     display: flex;
     justify-content: center;
@@ -485,21 +459,18 @@ footer {
     color: #fff;
     background-image: linear-gradient(to right, #000000, rgb(82, 76, 76));
   }
-
   .c1 {
     display: flex;
     width: 300px;
     height: 225px;
     margin: auto;
   }
-
   .c4 {
     display: flex;
     width: 250px;
     height: 350px;
     margin: auto;
   }
-
   .texto11 {
     display: flex;
     color: #fff;
@@ -513,7 +484,6 @@ footer {
     justify-content: center;
     width: 275px;
   }
-
   .formulario1 {
     display: flex;
     flex-direction: column;
@@ -526,23 +496,17 @@ footer {
     margin: auto;
     width: 300px;
   }
-
   .fotocard1 {
     width: 250px;
     height: 150px;
   }
-
   .textcard {
     font-size: 15px;
   }
-
   .textcard1 {
     font-size: 15px;
   }
-
   .cardtamano {
     width: auto;
   }
-}
-
-/*# sourceMappingURL=styles.css.map */
+}/*# sourceMappingURL=styles.css.map */
