se modifica error de tipeo en un partial

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -4,4 +4,4 @@
 @import "../styles/partials/header";
 @import "../styles/partials/main";
 @import "../styles/partials/footer";
-@import "../styles/partials/mediaqueries"
+@import "../styles/partials/mediaqueries";
