--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,6 +1,9 @@
 @import "../styles/partials/default";
+@import "../styles/partials/maps";
 @import "../styles/partials/colors";
 @import "../styles/partials/fonts";
+@import "../styles/partials/extends";
+@import "../styles/partials/mixins";
 @import "../styles/partials/header";
 @import "../styles/partials/main";
 @import "../styles/partials/footer";
