--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -111,8 +111,8 @@ main {
 
 .c1 {
     display: flex;
-    width: 700px;
-    height: 600px;
+    width: 900px;
+    height: 900px;
     margin: auto;
 
 }
@@ -215,7 +215,8 @@ main {
 }
 
 .cardtamano {
-    width: auto;
+    width: 1105px;
+    margin: auto;
 }
 
 
