--- a/styles/partials/_mediaqueries.scss
+++ b/styles/partials/_mediaqueries.scss
@@ -40,13 +40,12 @@
 
     header {
         display: flex;
+        width: auto;
+        padding: 5px 0px;
         flex-direction: column;
-        width: 100%;
-        padding: 15px 60px;
         justify-content: space-around;
         align-items: center;
-        background-image: url(../img/fondonegrotextura.jpg);
-        background-size: contain;
+        background-color: map-get($colores, color-secondary);
 
         ul {
             display: flex;
@@ -64,10 +63,9 @@
         display: flex;
         justify-content: center;
         text-align: center;
-        @extend %borderRadius;
         background-color: map-get($colores, color-primary);
         color: map-get($colores, color-secondary);
-        border: 3px outset map-get($colores, color-tertiary);
+        border: 3px outset map-get($colores, color-secondary);
     }
 
     .navtexto {
@@ -90,7 +88,7 @@
             background-color: map-get($colores, color-secondary);
             border-radius: 15px;
             font-family: 'Permanent Marker', cursive;
-            font-size: 20px;
+            font-size: 15px;
 
         }
     }
